# EvilEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Licences.txt  README.md  TODO.md  build.ninja  notes  quail.txt  todos
.ninja/: properties.ninja
.quail/: cmake_refresh_all.ps1  cmake_remove_cache.ps1  exe_with_res.ps1  quail.txt
cmake/: CPM.cmake  properties.cmake
dependencies/: CMakeLists.txt
dependencies/freetype/lib/release/: freetype.lib
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/imgui/: imgui_impl_win32.cpp
dependencies/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
project/: CMakeLists.txt
project/inc/: debug.hpp  frame.hpp  gl.hpp  global.hpp  imgui.hpp  object.hpp  openal.hpp  platform.hpp  render.hpp  scene.hpp  scenes.hpp  types.hpp  update.hpp  viewport.hpp
project/inc/ai/: agent.hpp
project/inc/audio/: io.hpp  openal.hpp
project/inc/components/: camera.hpp  collider.hpp  force.hpp  mesh.hpp  movingPlatform.hpp  parenthood.hpp  parentship.hpp  rigidbody.hpp  rotating.hpp  transform.hpp
project/inc/components/audio/: listener.hpp  source.hpp
project/inc/components/checkpoints/: checkPointManager.hpp  checkpoint.hpp
project/inc/components/collisions/: collider.hpp  collisionManager.hpp  collisionMappings.hpp  collisionsDetection.hpp
project/inc/components/powerUps/: powerUp.hpp
project/inc/components/traps/: springTrap.hpp
project/inc/components/ui/: button.hpp  rect.hpp  ui.hpp  uiManager.hpp  uiMappings.hpp
project/inc/generator/: mapGenerator.hpp  module.hpp  randomIterator.hpp
project/inc/generator/modules/: module1.json
project/inc/hid/: input.hpp  inputDevices.hpp  inputKey.hpp  inputManager.hpp  inputMappings.hpp
project/inc/manager/: audio.hpp  objects.hpp  scenes.hpp
project/inc/platform/: console.hpp  loader.hpp  types.hpp  windows.hpp
project/inc/platform/agn/: imgui.hpp  types.hpp  window.hpp  ximgui.hpp
project/inc/platform/win/: console.hpp  imgui.hpp  loader.hpp  types.hpp  window.hpp
project/inc/player/: player.hpp  playerLogic.hpp  playerMovement.hpp
project/inc/render/: font.hpp  gl.hpp  material.hpp  mesh.hpp  render.hpp  shader.hpp  systems.hpp  texture.hpp  transform.hpp
project/inc/render/temp/: Cubesphere.h  Icosahedron.h  Icosphere.h  Sphere.h  Spheres.hpp
project/inc/resources/: gltf.hpp  json.hpp  location.hpp  manager.hpp  materials.hpp  meshes.hpp  model.hpp  prefab.hpp  shaders.hpp  viewPortData.hpp
project/inc/resources/util/: mmrelation.hpp
project/inc/tool/: debug.hpp  editor.hpp  imgui.hpp  profiler.hpp
project/inc/util/: animation.hpp  boundingFrustum.hpp  colorCorrection.hpp  sizedBuffor.hpp
project/inc/util/objects/: gltf.hpp
project/res/data/: materials.json  meshes.json  scene.json
project/res/data/scenes/: alpha.json  someSpinning.json  tower.json
project/res/data/scenes/segments/: t_10_0.json  t_1_0.json  t_1_1.json  t_1_2.json  t_1_3.json  t_1_n.json  t_2_0.json  t_2_1.json  t_2_2.json  t_2_3.json  t_3_0.json  t_3_1.json  t_3_2.json  t_3_3.json  t_4_0.json  t_4_1.json  t_4_2.json  t_4_3.json  t_5_0.json  t_5_1.json  t_5_2.json  t_5_3.json  t_6_0.json  t_7_0.json  t_8_0.json  t_9_0.json  t_n.json
project/res/models/: create.gltf  fence.gltf  ninja.glb  ninja.gltf  ninja2.gltf  ninjablack.gltf  ninjawhite.gltf  toriii.gltf  treelow.gltf  treeunsubdivided.gltf
project/res/models/samples/: empty_gltf.gltf  untitled.gltf
project/res/scenes/: sample.json
project/res/shaders/: Triangle.frag  Triangle.vert
project/res/shaders/canvas/: ActivePowerUp.frag  ActivePowerUp.vert  ChargeIndicator.frag  Font.frag  Font.vert  MinimapPlayerIcon.frag  MinimapPlayerIcon.vert  PowerUpIcon.frag  PowerUpIcon.vert  STexture.frag  STexture.vert  TowerMinimap.frag  TowerMinimap.vert
project/res/shaders/screen/: ATexture.frag  ATexture.vert  ArrayTexture.frag  AtlasTexture.frag  AtlasTexture.vert  Colorize.frag  MTexture.frag  Post-processing.frag  Post-processing.vert  STexture.frag  STexture.vert
project/res/shaders/world/: CelShading.frag  CelShading.vert  Gooch.frag  Gooch.vert  GoochFace.frag  GoochFinal.frag  GoochFinal.vert  PhongLight.frag  PhongLight.vert  SimpleBlue.frag  SimpleBrown.frag  SimpleColor.frag  SimpleGray.frag  SimpleGreen.frag  SimpleGrey.frag  SimpleOrange.frag  SimpleRed.frag  SimpleTexture.frag  SimpleTexture.vert  SimpleWhite.frag  SpaceOnly.vert  gltf.vert
project/res/shaders/world/cubemap/: skybox.frag  skybox.vert
project/res/textures/dummy/: animated_texture.xcf  animated_texture_2.xcf
project/src/: agn_main.cpp  dr_wav.cc  main_platform_windows.cpp  tiny_obj_loader.cc  win_main.cpp
